tests/bigint/invalid06.js
type InvalidNegE = -2e9n; // error
